# functional-geometric-dsl

./: LICENSE  README.md  hlint.yaml  lab1.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Dibujo.hs  Interp.hs  Main.hs  Pred.hs
src/Basica/: Escher.hs
src/extras/: Particulas.hs  Pescado.hs
