cabal-version:      3.4
name:               lab1
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andres Villagra
maintainer:         89531860+KaiserOfNone@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable lab1
    import:           warnings
    main-is:          Main.hs
    other-modules:    Dibujo, Interp, Pred, Basica.BasicaDoble, Basica.Comun, Basica.Ejemplo, Basica.Escher

    build-depends:    base ^>=4.17.2.1, gloss, GLUT
    hs-source-dirs:   src
    default-language: Haskell2010

executable pescado
    import:           warnings
    main-is:          extras/Pescado.hs
    other-modules:    Dibujo, Interp, Pred, Basica.BasicaDoble, Basica.Comun, Basica.Ejemplo, Basica.Escher

    build-depends:    base ^>=4.17.2.1, gloss, GLUT
    hs-source-dirs:   src
    default-language: Haskell2010

executable particulas
    import:           warnings
    main-is:          extras/Particulas.hs
    other-modules:    Dibujo, Interp, Pred, Basica.BasicaDoble, Basica.Comun, Basica.Ejemplo, Basica.Escher

    build-depends:    base ^>=4.17.2.1, gloss, GLUT
    hs-source-dirs:   src
    default-language: Haskell2010